[package]
name = "trek"
version = "0.0.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"
description = "Fast, effective, minimalist web framework for Rust"
repository = "https://github.com/trek-rs/trek"
readme = "README.md"
keywords = ["trek", "hyper", "http", "web", "framework", "async", "await", "future"]
categories = [
  "asynchronous",
  "network-programming",
  "web-programming::http-server"
]
license = "MIT/Apache-2.0"
publish = false

[workspace]
members = [] 

[dependencies]
log = "0.4.8"
http = "0.1.19"
async-std = "0.99.11"
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
futures-preview = "=0.3.0-alpha.19"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
serde_qs = "0.5.0"
serde_urlencoded = "0.6.1"
fnv = "1.0.3"
Inflector = "0.11.4"
path-tree = "0.1.8"
tokio = "0.2.0-alpha.6"
tokio-executor = "=0.2.0-alpha.6"
tower-service = "0.3.0-alpha.2"
multipart-async = { git = "https://github.com/abonander/multipart-async.git", rev = "623e5fc", features = ["server", "hyper"], default-features = false }


[dev-dependencies]
pretty_env_logger = "0.3.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1