[package]
name = "trek"
version = "0.0.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"
description = "Fast, effective, minimalist web framework for Rust"
repository = "https://github.com/trek-rs/trek"
readme = "README.md"
keywords = ["trek", "hyper", "http", "web", "framework", "async", "await", "future"]
categories = [
  "asynchronous",
  "network-programming",
  "web-programming::http-server"
]
license = "MIT/Apache-2.0"
publish = false

[features]
default = ["tokio"]
unstable = []

[workspace]
members = [] 

[dependencies]
bytes = "0.4.12"
log = "0.4.8"
http = "0.1.19"
futures = "0.3.1"
hyper = { git = "https://github.com/hyperium/hyper", rev = "71d088d", features = ["unstable-stream"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
serde_qs = "0.5.0"
serde_urlencoded = "0.6.1"
fnv = "1.0.3"
Inflector = "0.11.4"
path-tree = "0.1.9"
tower-service = "0.3.0-alpha.2"
tokio = { version = "=0.2.0-alpha.6", optional = true }
multipart-async = { git = "https://github.com/fundon/multipart-async", branch = "futures-0.3.1", default-features = false, features = ["hyper", "server"] }

headers = "0.2.3"
async-std = { version = "1.0.0", optional = true }

[dev-dependencies]
pretty_env_logger = "0.3.1"
better-panic = "0.2.0"
anyhow = "1.0.22"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[[example]]
name = "hello"
required-features = ["tokio"]