[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
bytes = "0.5"
log = "0.4"
http = "0.2"
futures = "0.3"
headers = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.5"
serde_urlencoded = "0.6"

fnv = "1.0"
Inflector = "0.11"
path-tree = "0.1"
tower-service = "0.3"

pretty_env_logger = "0.3.1"
better-panic = "0.2.0"
anyhow = "1.0.22"

hyper = { git = "https://github.com/hyperium/hyper", rev = "78e8da1" }
multipart-async = { git = "https://github.com/fundon/multipart-async", branch = "tokio-0.2", default-features = false, features = ["hyper", "server"] }

trek = { path = "../trek", version = "0.0.0", default-features = false, features = ["tokio"] }
trek-serve = { path = "../trek-serve", version = "0.0.0", optional = true }

[dev-dependencies]
tokio = { version = "0.2.2", features = ["fs", "macros", "io-std", "rt-util", "sync", "time", "test-util"] }
tokio-test = "0.2"

[[example]]
name = "hello"
path = "hello.rs"
required-features = ["trek-serve"]