[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
log = "0.4"
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

pretty_env_logger = "0.3.1"
better-panic = "0.2.0"
anyhow = "1.0.22"

trek = { path = "../trek", version = "0.0.0", default-features = false, features = ["tokio"] }
trek-serve = { path = "../trek-serve", version = "0.0.0", optional = true }

[dev-dependencies]
tokio = { version = "0.2.2", features = ["fs", "macros", "io-std", "rt-util", "sync", "time", "test-util"] }
tokio-test = "0.2"

[[example]]
name = "hello"
path = "hello.rs"
required-features = ["trek-serve"]