[package]
name = "trek-core"
version = "0.1.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1.19"
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
serde_qs = "0.5.0"
serde_urlencoded = "0.6.1"
futures-preview = "=0.3.0-alpha.19"
multipart-async = { git = "https://github.com/abonander/multipart-async.git", rev = "54441275", features = ["server", "hyper"], default-features = false }

[dev-dependencies]
