[package]
name = "trek-core"
version = "0.0.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
bytes = "0.5"
futures = "0.3"

http = "0.2"
hyper = "0.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.5"
serde_urlencoded = "0.6"

fnv = "1.0"
Inflector = "0.11"
path-tree = "0.1"
tower-service = "0.3"

multipart-async = { git = "https://github.com/fundon/multipart-async", branch = "tokio-0.2", default-features = false, features = ["hyper", "server"], optional = true }

[package.metadata.docs.rs]
all-features = true