[package]
name = "trek-router"
version = "0.1.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1.19"
Inflector = "0.11.4"
path-tree = "0.1.8"
futures-preview = "=0.3.0-alpha.19"
trek-core = { path = "../trek-core" }

[dev-dependencies]
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }