[package]
name = "trek-router"
version = "0.0.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"
description = "Fast HTTP router for Rust"
repository = "https://github.com/trek-rs/trek"
readme = "README.md"
keywords = ["trek", "router", "http", "web", "framework", "async", "await", "future"]
categories = [
  "asynchronous",
  "network-programming",
  "web-programming::router"
]
license = "MIT/Apache-2.0"
publish = false

[dependencies]
log = "0.4"

http = "0.2"

fnv = "1.0"
Inflector = "0.11"
path-tree = "0.1"

trek-core = { path = "../trek-core", version = "0.0.0" }

[package.metadata.docs.rs]
all-features = true