[package]
name = "trek-serve"
version = "0.0.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
log = "0.4"
http = "0.2"
futures = "0.3"
headers = "0.2"
hyper = "0.13" 
mime-db = "0.1"

trek-core = { path = "../trek-core", version = "0.0.0" }

tokio = { version = "0.2", default-features = false, features = ["fs", "io-std", "io-util"] }

[package.metadata.docs.rs]
all-features = true