[package]
name = "trek-serve"
version = "0.0.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
bytes = "0.5"

http = "0.2"
headers = "0.3" 
hyper = "0.13" 

futures = "0.3"
mime = "0.3"
mime-db = "0.1"

trek-core = { path = "../trek-core", version = "0.0.0" }

tokio = { version = "0.2", default-features = false, features = ["fs", "io-std", "io-util"] }

[package.metadata.docs.rs]
all-features = true