[package]
name = "trek"
version = "0.0.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"
description = "A web framework for Rust"
repository = "https://github.com/trek-rs/trek"
readme = "README.md"
keywords = ["trek", "http", "web", "framework", "async"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server"
]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
