[package]
name = "trek"
version = "0.0.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"
description = "A web framework for Rust"
repository = "https://github.com/trek-rs/trek"
readme = "README.md"
keywords = ["trek", "http", "web", "framework", "async"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server"
]
license = "MIT/Apache-2.0"

[dependencies]
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream", "runtime"] }
tokio = { version = "0.2.0-alpha.6", default-features = false, features = ["rt-full"] }
trek-core = { path = "../trek-core" }
trek-router = { path = "../trek-router" }
