[package]
name = "trek"
version = "0.0.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"
description = "Fast, effective, minimalist web framework for Rust"
repository = "https://github.com/trek-rs/trek"
readme = "README.md"
keywords = ["trek", "hyper", "http", "web", "framework", "async", "await", "future"]
categories = [
  "asynchronous",
  "network-programming",
  "web-programming::http-server"
]
license = "MIT/Apache-2.0"
publish = false

[features]
default = ["tokio"]
unstable = []
cookies = ["cookie"]

[dependencies]
log = "0.4"
futures = "0.3"

http = "0.2"
hyper = "0.13" 

cookie = { version = "0.12", features = ["percent-encode"], optional = true  }

trek-core = { path = "../trek-core", version = "0.0.0" }
trek-router = { path = "../trek-router", version = "0.0.0" }

tokio = { version = "0.2", optional = true }
async-std = { version = "1.0", features = ["attributes"], optional = true }

# trek-serve-handler = { path = "../trek-serve-", version = "0.1.0", optional = true }

[dev-dependencies]
pretty_env_logger = "0.3.1"
better-panic = "0.2.0"
anyhow = "1.0.22"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

# [[example]]
# name = "hello"
# required-features = ["tokio"]

[package.metadata.docs.rs]
all-features = true